# contatori

./: Cargo.toml  README.md
benches/: contatori_vs_atomic.rs  contatori_vs_otel.rs  counter_benchmark.rs  labeled_group_benchmark.rs
examples/: demo.rs  labeled_group_demo.rs  opentelemetry_demo.rs
src/: adapters.rs  contatori.rs  counters.rs  lib.rs  observers.rs  snapshot.rs
src/adapters/: group.rs  labeled.rs  non_resettable.rs  resettable.rs
src/contatori/: average.rs  maximum.rs  minimum.rs  signed.rs  unsigned.rs
src/counters/: average.rs  maximum.rs  minimum.rs  monotone.rs  rate.rs  signed.rs  unsigned.rs
src/observers/: error.rs  json.rs  mod.rs  opentelemetry.rs  prometheus.rs  table.rs
