[package]
name = "contatori"
version = "0.7.0"
edition = "2021"
authors = ["Nicola Bonelli <nicola.bonelli@gmail.com>"]
description = "High-performance sharded atomic counters for Rust"
license = "MIT"
repository = "https://github.com/awgn/contatori"
readme = "README.md"
keywords = ["atomic", "counter", "concurrent", "performance", "sharded"]
categories = ["concurrency", "data-structures"]

[features]
default = []
table = ["dep:tabled"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
prometheus = ["dep:prometheus"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
full = ["table", "json", "prometheus", "opentelemetry"]
demo = ["full", "clap"]

[dependencies]
atomic-traits = "0.4.0"
bytemuck = "1.24.0"
crossbeam-utils = "0.8.21"
num-traits = "0.2.19"

# Optional dependencies for observers
tabled = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
prometheus = { version = "0.14", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true }
thiserror = "2.0"
atomic-time = "0.1.5"

[dev-dependencies]
criterion = "0.5"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.27", features = ["metrics"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "contatori_vs_atomic"
harness = false

[[bench]]
name = "contatori_vs_otel"
harness = false

[[example]]
name = "demo"
required-features = ["demo"]

[[example]]
name = "labeled_group_demo"
required-features = ["full"]

[[example]]
name = "opentelemetry_demo"
required-features = ["opentelemetry"]

[package.metadata.docs.rs]
all-features = true
